[gd_scene load_steps=4 format=3 uid="uid://workshop_001"]

[ext_resource type="PackedScene" uid="uid://base_scene_template" path="res://level1/scene_template.tscn" id="1_base"]
[ext_resource type="Script" path="res://level1/workshop.gd" id="2_script"]
[ext_resource type="Texture2D" path="res://level1/workshop.jpg" id="3_bg"]

[node name="SceneRoot" instance=ExtResource("1_base")]
script = ExtResource("2_script")

[node name="Background" parent="." index="0"]
texture = ExtResource("3_bg")

[node name="BreakTimerPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="0"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
self_modulate = Color(1, 1, 1, 0.7)

[node name="BreakTimerBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="BreakTimer" type="Label" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Break Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuspicionPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="1"]
visible = false
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="SuspicionBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = "SuspicionProgressBar"
value = 0.0
show_percentage = false

[node name="SuspicionLabel" type="Label" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Suspicion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitlePanel" type="Panel" parent="HBoxContainer/LeftVBox" index="2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
self_modulate = Color(1, 1, 1, 0.7)

[node name="Title" type="Label" parent="HBoxContainer/LeftVBox/TitlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Workshop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComponentsPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="3"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
self_modulate = Color(1, 1, 1, 0.7)

[node name="ComponentsLabel" type="Label" parent="HBoxContainer/LeftVBox/ComponentsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Components: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MechanismsPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="4"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
self_modulate = Color(1, 1, 1, 0.7)

[node name="MechanismsLabel" type="Label" parent="HBoxContainer/LeftVBox/MechanismsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Mechanisms: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PipesPanel" type="Panel" parent="HBoxContainer/LeftVBox" index="5"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
self_modulate = Color(1, 1, 1, 0.7)

[node name="PipesLabel" type="Label" parent="HBoxContainer/LeftVBox/PipesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "Pipes: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AssembleComponentButton" type="Button" parent="HBoxContainer/RightVBox" index="0"]
layout_mode = 2
text = "Assemble Component"

[node name="BuyPipeButton" type="Button" parent="HBoxContainer/RightVBox" index="1"]
layout_mode = 2
text = "Assemble Pipe: 10"

[node name="BuyMechanismButton" type="Button" parent="HBoxContainer/RightVBox" index="2"]
layout_mode = 2
text = "Assemble Mechanism: 10"

[node name="DevPipesButton" type="Button" parent="HBoxContainer/RightVBox" index="3"]
layout_mode = 2
text = "Developer: Pipes"

[node name="BackToPassageButton" type="Button" parent="HBoxContainer/RightVBox" index="4"]
layout_mode = 2
text = "Back to Shop"

[connection signal="pressed" from="HBoxContainer/RightVBox/AssembleComponentButton" to="." method="_on_assemble_component_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BuyPipeButton" to="." method="_on_buy_pipe_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BuyMechanismButton" to="." method="_on_buy_mechanism_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/DevPipesButton" to="." method="_on_dev_pipes_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BackToPassageButton" to="." method="_on_back_to_passage_button_pressed"]
